@@ -9,7 +9,7 @@ Python compability note:
 Tested with Python 2.0+, but should work with Python 1.5.2+.
 """
 
-__version__ = '0.6.0'
+__version__ = '2.3.9'
 
 __all__ = [
   # constants
